Implement information section fully

--- a/style.css
+++ b/style.css
@@ -128,6 +128,17 @@ button {
     justify-content: center; */
 }
 
+.item-image-center{
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+    border: 3px solid #3882F6;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+
+}
+
 .item-image img {
     width: auto;
     height: 100%;
